# bharat-courts

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  live-e2e.yml  python-publish.yml
docs/: index.md
docs/about/: contributing.md  data-sources.md  how-it-works.md
docs/guides/: archive.md  calcutta-hc.md  captcha.md  cli.md  district-courts.md  facade.md  high-courts.md  judgment-search.md  supreme-court.md
docs/lawyers/: chatgpt-and-others.md  claude-code.md  claude-desktop.md  faq.md  index.md  prompts.md
docs/reference/: archive.md  captcha.md  clients.md  config.md  courts.md  facade.md  index.md  models.md
docs/start/: configuration.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: fetch_wpa_12886_2024.py  live_hcservices.py  live_search.py  live_test_all.py  live_test_district.py
overrides/: home.html  main.html
overrides/partials/: home.css
src/bharat_courts/: __init__.py  cli.py  config.py  courts.py  facade.py  http.py  models.py
tests/: conftest.py  test_archive_quickwins.py  test_archive_schema.py  test_archive_storage.py  test_calcuttahc.py  test_captcha.py  test_captcha_onnx.py  test_cli.py  test_courts.py  test_districtcourts_client.py  test_districtcourts_parser.py  test_facade.py  test_hcservices_client.py  test_hcservices_parser.py  test_http.py  test_judgments_client.py  test_judgments_parser.py  test_models.py  test_sci.py
tests/fixtures/: districtcourts_case_status.html  districtcourts_case_status_live.html  (+11 more)
(+36 files in other folders)
